--- a/index.html
+++ b/index.html
@@ -31,5 +31,8 @@
     </main>
     <script src="imc.js"></script>
 </body>
-
+<footer>
+    <p>Site criado por <a href="https://github.com/nilsonjacinto/Calculadora" target="_blank" class="externo"> &copy Nilson
+            Jacinto de Oliveira</a></p>
+</footer>
 </html>
