--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     <script src="imc.js"></script>
 </body>
 <footer>
-    <p>Site criado por <a href="https://github.com/nilsonjacinto/Calculadora" target="_blank" class="externo"> &copy Nilson
+    <p>Site criado por <a href="https://github.com/nilsonjacinto/Calculadora" target="_blank" class="externo"> &copy
+            Nilson
             Jacinto de Oliveira</a></p>
 </footer>
+
 </html>
