coloquei fundo e centraqlisei

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 </body>
 <footer>
     <p>Site criado por <a href="https://github.com/nilsonjacinto/Calculadora" target="_blank" class="externo"> &copy
-            Nilson
-            Jacinto de Oliveira</a></p>
+            Nilson Jacinto de Oliveira</a></p>
 </footer>
 
 </html>
