--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
             <button id="calcular">Calcular</button>
             
             <div class="result" id="resultado"></div>
+
+            <footer>
+                <p>Site criado por <a href="https://github.com/nilsonjacinto/" target="_blank" class="white"> &copy Nilson
+                        Jacinto de Oliveira</a></p>
+            </footer>
+
         </div>
     </main>
 
